--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,7 @@
     font-family: 'Open Sans', sans-serif;
   }
 }
+
+.button {
+  @apply mt-4 md:mt-2 text-white p-3 md:p-2 rounded-lg text-lg md:text-base transition duration-300 ease-in-out;
+}
