--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,5 @@
 }
 
 .button {
-  @apply mt-4 md:mt-2 text-white p-3 md:p-2 rounded-lg text-lg md:text-base transition duration-300 ease-in-out;
+  @apply mt-4 text-white p-3 md:p-2 rounded-lg text-lg md:text-base transition duration-300 ease-in-out outline-none focus:ring-4 active:ring-4;
 }
